# alpha_pipeline

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/agents/: __init__.py  he_agent.py  mad_agent.py  sa_agent.py
src/infrastructure/: __init__.py  document_parsers.py  gemini_gateway.py
src/prompts/: __init__.py  templates.py
src/protocol/: __init__.py  agent_behavior.py
src/types/: __init__.py  agent_responses.py  domain_errors.py  pipeline_state.py  result.py
src/workflow/: __init__.py  graph_builder.py  routing_logic.py
tests/unit/: test_agents.py  test_document_parsers.py  test_graph.py  test_routing.py
